src_old/objects/ServiceTarget__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Service Targets</relationshipLabel>
        <relationshipName>ServiceTargets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TargetName__c</fullName>
        <formula>Target__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TargetName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Target</label>
        <referenceTo>Target__c</referenceTo>
        <relationshipLabel>Service Targets</relationshipLabel>
        <relationshipName>ServiceTarget</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>UniqueKey</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Target</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Service Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>